--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="/rofo-enum/umi.css" />
     <script>
-      window.routerBase = "/";
+      window.routerBase = "/rofo-enum/";
     </script>
     <script>
       //! umi version: 3.4.23
